# horizon

./: .dockerignore  .env.dev.example  .env.dev.remote.example  .env.example  .gitignore  Dockerfile  README.md  build.gradle.kts  compose.yaml  gradle.properties  settings.gradle.kts
.specstory/: .project.json  statistics.json
ai/: .env.example  Dockerfile  pyproject.toml  requirements.txt
ai/app/: config.py  main.py
ai/app/core/: exceptions.py
ai/app/routers/: analyze.py  coach.py  health.py
ai/app/schemas/: analyze.py  coach.py
ai/app/services/: coach_service.py  disaster_coach_service.py  llm_service.py  resilience_coach_service.py  weather_data.py
ai/tests/: test_coach.py
docs/: AI_SESSION_HANDOFF.md  CLOUDFLARE_TUNNEL.md  DEPLOY.md  DEV_SETUP.md  DISASTER_SIM.md  MVP.md  README.md  RESILIENCE_DESIGN.md  RESILIENCE_TEST_GUIDE.md  SESSION_HANDOFF.md  SETUP.md  TECH_STACK.md  Untitled  cursor_project_tech_stack_integration.md  cursor_project_tech_stack_integration2026-06-23.md  horizon_PROMPT.md  login_PROMPT.md  개발계획서_도시기후설계자.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend-admin/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: deploy-docker-trigger.ps1  deploy-docker.ps1  deploy-docker.sh  fix_disaster_scenario_encoding.bat  fix_disaster_scenario_encoding.sql  fix_metrics_panel_strings.py  generate_dev_plan_hwpx.py  init-postgres-horizon.bat  init-postgres-horizon.sql  migrate_region_config_disaster.bat  migrate_region_config_disaster.sql  seed_disaster_scenarios.bat  (+17 more)
(+283 files in other folders)
